新增访问白名单,防止白名单ip访问频率过高导致日志告警过多

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -160,6 +160,9 @@ RATE_LIMIT_GENERATE_IMAGE=30 per hour
 # 云端推荐：50 per hour
 RATE_LIMIT_DELETE_REPORT=50 per hour
 
+# 速率限制IP白名单
+# 防止访问api/health频率过高导致告警日志过多
+RATE_LIMIT_IP_LIST={'127.0.0.1','::1'}
 
 # ============================================
 # 安全头配置（可选）
